--- a/portfolio-client/package.json
+++ b/portfolio-client/package.json
@@ -20,6 +20,7 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
     "react-vertical-timeline-component": "^3.6.0",
+    "swiper": "^11.0.4",
     "typewriter-effect": "^2.21.0",
     "web-vitals": "^2.1.4",
     "windups": "^1.2.2"
