--- a/portfolio-client/package.json
+++ b/portfolio-client/package.json
@@ -1,6 +1,7 @@
 {
   "name": "portfolio-client",
   "version": "0.1.0",
+  "proxy": "http://localhost:8080",
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
